<resources>
    <string name="app_name">blescanner</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan_device">Scan device</string>
    <string name="ble_not_supported">BLE not supported!</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_device_bonded">No device bonded</string>
    <string name="no_device_found">No device found</string>
    <string name="ask_for_disconnect">Do you want to disconnect this device?</string>
    <string name="device">Device</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="bonded">Bonded</string>
    <string name="available">Available</string>
    <string name="unknown">Unknown</string>
    <string name="scanning">Scanning...</string>
    <string name="scan_completed">Scan completed</string>
    <string name="stop_scanning">Scan stopped</string>
    <string name="has_been_disconnected">has been disconnected</string>
    <string name="dismiss">DISMISS</string>
    <string name="bt_not_enabled">Bluetooth is not enabled!!!</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="pair_device">PAIR device</string>
</resources>
